--- a/notebooks/jupyter/New_PolyPoints.ipynb
+++ b/notebooks/jupyter/New_PolyPoints.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +345,7 @@
        "5   POINT (3.596907 36.5639442)  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
        "5   POINT (3.596907 36.5639442)  town  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +494,7 @@
        "0.0022522522522522522"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "metadata": {
     "scrolled": true
    },
@@ -667,7 +667,7 @@
        "5  POLYGON ((3.599159252252252 36.5639442, 3.5991...  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -794,7 +794,7 @@
        "5  POLYGON ((3.599159252252252 36.5639442, 3.5991...  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -806,27 +806,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12429\n"
+      "28635\n"
      ]
     }
    ],
    "source": [
     "# Load Polygon\n",
-    "poly_raster_file = 'AFR_PPP_2015_adj_v2_1500c300.shp'\n",
+    "poly_raster_file = 'LS15_w001001_Clip_1500c300.shp'\n",
     "raster_polygons = gpd.read_file(temp_data+poly_raster_file)\n",
     "print(len(raster_polygons))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -858,32 +858,32 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>POLYGON ((18.466249 -34.283749, 18.466249 -34....</td>\n",
+       "      <td>POLYGON ((20.258333 -34.566667, 20.266667 -34....</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>POLYGON ((9.857915999999999 37.34125, 9.866249...</td>\n",
+       "      <td>POLYGON ((9.85 37.333333, 9.866667 37.333333, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
-       "      <td>POLYGON ((22.432916 -33.967083, 22.441249 -33....</td>\n",
+       "      <td>POLYGON ((19.191667 -34.408333, 19.2 -34.40833...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
-       "      <td>POLYGON ((24.724582 -33.992083, 24.757916 -33....</td>\n",
+       "      <td>POLYGON ((20.225 -34.558333, 20.233333 -34.558...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
-       "      <td>POLYGON ((20.057916 -33.933749, 20.066249 -33....</td>\n",
+       "      <td>POLYGON ((9.824999999999999 37.3, 9.833333 37....</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>5</td>\n",
-       "      <td>POLYGON ((22.599582 -33.992083, 22.641249 -33....</td>\n",
+       "      <td>POLYGON ((22.033333 -34.191667, 22.058333 -34....</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -891,15 +891,15 @@
       ],
       "text/plain": [
        "   FID                                           geometry\n",
-       "0    0  POLYGON ((18.466249 -34.283749, 18.466249 -34....\n",
-       "1    1  POLYGON ((9.857915999999999 37.34125, 9.866249...\n",
-       "2    2  POLYGON ((22.432916 -33.967083, 22.441249 -33....\n",
-       "3    3  POLYGON ((24.724582 -33.992083, 24.757916 -33....\n",
-       "4    4  POLYGON ((20.057916 -33.933749, 20.066249 -33....\n",
-       "5    5  POLYGON ((22.599582 -33.992083, 22.641249 -33...."
+       "0    0  POLYGON ((20.258333 -34.566667, 20.266667 -34....\n",
+       "1    1  POLYGON ((9.85 37.333333, 9.866667 37.333333, ...\n",
+       "2    2  POLYGON ((19.191667 -34.408333, 19.2 -34.40833...\n",
+       "3    3  POLYGON ((20.225 -34.558333, 20.233333 -34.558...\n",
+       "4    4  POLYGON ((9.824999999999999 37.3, 9.833333 37....\n",
+       "5    5  POLYGON ((22.033333 -34.191667, 22.058333 -34...."
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1012,15 +1012,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Current Start \n",
+    "1. Data: 2019-01-17 @ 10:38 pm\n",
+    "2. Raster Poly File: LS15_w001001_Clip_1500c300.shp\n",
+    "3. OSM Town File: 20190114_osm_africa_towns.csv"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "elapsed time is: 6950.059248209s\n"
+      "elapsed time is: 15463.357652902603s\n"
      ]
     }
    ],
@@ -1037,14 +1047,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3154\n"
+      "4721\n"
      ]
     }
    ],
@@ -1054,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1092,8 +1102,8 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>89369215</td>\n",
-       "      <td>11918</td>\n",
-       "      <td>POLYGON ((5.499583 22.81625, 5.541249 22.81625...</td>\n",
+       "      <td>14962</td>\n",
+       "      <td>POLYGON ((5.516667 22.816667, 5.533333 22.8166...</td>\n",
        "      <td>Algeria</td>\n",
        "      <td>Tamanrasset</td>\n",
        "      <td>town</td>\n",
@@ -1103,8 +1113,8 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>89980948</td>\n",
-       "      <td>10871</td>\n",
-       "      <td>POLYGON ((2.474583 27.224584, 2.482916 27.2245...</td>\n",
+       "      <td>14115</td>\n",
+       "      <td>POLYGON ((2.466667 27.216667, 2.483333 27.2166...</td>\n",
        "      <td>Algeria</td>\n",
        "      <td>In Salah</td>\n",
        "      <td>town</td>\n",
@@ -1114,8 +1124,8 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>252600742</td>\n",
-       "      <td>242</td>\n",
-       "      <td>POLYGON ((2.999583 36.824584, 3.016249 36.8245...</td>\n",
+       "      <td>396</td>\n",
+       "      <td>POLYGON ((2.95 36.816667, 3.025 36.816667, 3.0...</td>\n",
        "      <td>Algeria</td>\n",
        "      <td>Boumerdès</td>\n",
        "      <td>town</td>\n",
@@ -1125,8 +1135,8 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>253167052</td>\n",
-       "      <td>242</td>\n",
-       "      <td>POLYGON ((2.999583 36.824584, 3.016249 36.8245...</td>\n",
+       "      <td>633</td>\n",
+       "      <td>POLYGON ((3.691667 36.766667, 3.7 36.766667, 3...</td>\n",
        "      <td>Algeria</td>\n",
        "      <td>Thenia</td>\n",
        "      <td>town</td>\n",
@@ -1136,8 +1146,8 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>253167208</td>\n",
-       "      <td>242</td>\n",
-       "      <td>POLYGON ((2.999583 36.824584, 3.016249 36.8245...</td>\n",
+       "      <td>360</td>\n",
+       "      <td>POLYGON ((3.658333 36.825, 3.675 36.825, 3.675...</td>\n",
        "      <td>Algeria</td>\n",
        "      <td>Zemmouri</td>\n",
        "      <td>town</td>\n",
@@ -1147,8 +1157,8 @@
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>253291208</td>\n",
-       "      <td>804</td>\n",
-       "      <td>POLYGON ((3.557916 36.599584, 3.582916 36.5995...</td>\n",
+       "      <td>1606</td>\n",
+       "      <td>POLYGON ((3.6 36.591667, 3.608333 36.591667, 3...</td>\n",
        "      <td>Algeria</td>\n",
        "      <td>Lakhdaria</td>\n",
        "      <td>town</td>\n",
@@ -1161,12 +1171,12 @@
       ],
       "text/plain": [
        "      osm_id    FID                                           geometry  \\\n",
-       "0   89369215  11918  POLYGON ((5.499583 22.81625, 5.541249 22.81625...   \n",
-       "1   89980948  10871  POLYGON ((2.474583 27.224584, 2.482916 27.2245...   \n",
-       "2  252600742    242  POLYGON ((2.999583 36.824584, 3.016249 36.8245...   \n",
-       "3  253167052    242  POLYGON ((2.999583 36.824584, 3.016249 36.8245...   \n",
-       "4  253167208    242  POLYGON ((2.999583 36.824584, 3.016249 36.8245...   \n",
-       "5  253291208    804  POLYGON ((3.557916 36.599584, 3.582916 36.5995...   \n",
+       "0   89369215  14962  POLYGON ((5.516667 22.816667, 5.533333 22.8166...   \n",
+       "1   89980948  14115  POLYGON ((2.466667 27.216667, 2.483333 27.2166...   \n",
+       "2  252600742    396  POLYGON ((2.95 36.816667, 3.025 36.816667, 3.0...   \n",
+       "3  253167052    633  POLYGON ((3.691667 36.766667, 3.7 36.766667, 3...   \n",
+       "4  253167208    360  POLYGON ((3.658333 36.825, 3.675 36.825, 3.675...   \n",
+       "5  253291208   1606  POLYGON ((3.6 36.591667, 3.608333 36.591667, 3...   \n",
        "\n",
        "   country         city osm_type        lat       lon  \n",
        "0  Algeria  Tamanrasset     town  22.785454  5.532446  \n",
@@ -1177,7 +1187,7 @@
        "5  Algeria    Lakhdaria     town  36.563944  3.596907  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1188,33 +1198,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "poly_overlap_out.to_file(temp_data+'AFR_PPP_2015_adj_v2_1500c300_polyoverlap_towns.shp', driver='ESRI Shapefile')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2494"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test_gpd = 'AFR_PPP_2000_adj_v2_1500c300_polyoverlap_towns.shp'\n",
-    "test_open = gpd.read_file(temp_data+test_gpd)\n",
-    "len(test_open)"
+    "poly_overlap_out.to_file(temp_data+'LS15_w001001_Clip_1500c300_polyoverlap_towns.shp', driver='ESRI Shapefile')"
    ]
   }
  ],
