--- a/notebooks/jupyter/New_PolyPoints-C.ipynb
+++ b/notebooks/jupyter/New_PolyPoints-C.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +345,7 @@
        "5   POINT (3.596907 36.5639442)  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
        "5   POINT (3.596907 36.5639442)  town  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +494,7 @@
        "0.0022522522522522522"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -667,7 +667,7 @@
        "5  POLYGON ((3.599159252252252 36.5639442, 3.5991...  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -794,7 +794,7 @@
        "5  POLYGON ((3.599159252252252 36.5639442, 3.5991...  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -806,27 +806,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "28635\n"
+      "30494\n"
      ]
     }
    ],
    "source": [
     "# Load Polygon\n",
-    "poly_raster_file = 'LS15_w001001_Clip_1500c300.shp'\n",
+    "poly_raster_file = 'WPE_1KM_2016_Pop_Clip.tif_1500c300.shp'\n",
     "raster_polygons = gpd.read_file(temp_data+poly_raster_file)\n",
     "print(len(raster_polygons))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# For GHS make FID and reset crs\n",
+    "# FID = list(range(len(raster_polygons)))\n",
+    "# raster_polygons['DN'] = FID\n",
+    "# raster_polygons.columns.values[0] = \"FID\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -858,32 +870,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>POLYGON ((20.258333 -34.566667, 20.266667 -34....</td>\n",
+       "      <td>POLYGON ((19.228423 -34.42911, 19.228423 -34.4...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>POLYGON ((9.85 37.333333, 9.866667 37.333333, ...</td>\n",
+       "      <td>POLYGON ((9.858949000000001 37.337643, 9.86793...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
-       "      <td>POLYGON ((19.191667 -34.408333, 19.2 -34.40833...</td>\n",
+       "      <td>POLYGON ((18.878078 -34.159614, 18.878078 -34....</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
-       "      <td>POLYGON ((20.225 -34.558333, 20.233333 -34.558...</td>\n",
+       "      <td>POLYGON ((19.255372 -34.40216, 19.300288 -34.4...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
-       "      <td>POLYGON ((9.824999999999999 37.3, 9.833333 37....</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>5</td>\n",
-       "      <td>POLYGON ((22.033333 -34.191667, 22.058333 -34....</td>\n",
+       "      <td>POLYGON ((18.392985 -34.150631, 18.410952 -34....</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -891,21 +898,20 @@
       ],
       "text/plain": [
        "   FID                                           geometry\n",
-       "0    0  POLYGON ((20.258333 -34.566667, 20.266667 -34....\n",
-       "1    1  POLYGON ((9.85 37.333333, 9.866667 37.333333, ...\n",
-       "2    2  POLYGON ((19.191667 -34.408333, 19.2 -34.40833...\n",
-       "3    3  POLYGON ((20.225 -34.558333, 20.233333 -34.558...\n",
-       "4    4  POLYGON ((9.824999999999999 37.3, 9.833333 37....\n",
-       "5    5  POLYGON ((22.033333 -34.191667, 22.058333 -34...."
+       "0    0  POLYGON ((19.228423 -34.42911, 19.228423 -34.4...\n",
+       "1    1  POLYGON ((9.858949000000001 37.337643, 9.86793...\n",
+       "2    2  POLYGON ((18.878078 -34.159614, 18.878078 -34....\n",
+       "3    3  POLYGON ((19.255372 -34.40216, 19.300288 -34.4...\n",
+       "4    4  POLYGON ((18.392985 -34.150631, 18.410952 -34...."
       ]
      },
-     "execution_count": 29,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "raster_polygons.head(6)"
+    "raster_polygons.head()"
    ]
   },
   {
@@ -916,7 +922,7 @@
    "source": [
     "# For GHS CRS\n",
     "\n",
-    "# {'ellps': 'WGS84',\n",
+    "# raster_polygons.crs ={'ellps': 'WGS84',\n",
     "#  'lon_0': 0,\n",
     "#  'no_defs': True,\n",
     "#  'proj': 'moll',\n",
@@ -931,10 +937,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# For GHS make FID and reset crs\n",
-    "# FID = list(range(len(raster_polygons)))\n",
-    "# raster_polygons['DN'] = FID\n",
-    "# raster_polygons.columns.values[0] = \"FID\""
+    "# raster_polygons.crs"
    ]
   },
   {
@@ -952,7 +955,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#raster_polygons_crs.head(6)"
+    "# raster_polygons_crs.head(6)"
    ]
   },
   {
@@ -1016,55 +1019,45 @@
    "metadata": {},
    "source": [
     "### Current Start \n",
-    "1. Data: 2019-01-17 @ 10:38 pm\n",
-    "2. Raster Poly File: LS15_w001001_Clip_1500c300.shp\n",
-    "3. OSM Town File: 20190114_osm_africa_towns.csv"
+    "1. Data: 2019-01-19 @ 3:05 pm\n",
+    "2. Raster Poly File: WPE_1KM_2016_Pop_Clip.tif_1500c300.shp\n",
+    "3. OSM Town File: 20190114_osm_africa_towns.csv\n",
+    "4. Clip: [:25000]\n",
+    "5. outfile - WPE_1KM_2016_Pop_Clip.tif_1500c300_polyoverlap_towns_subA.shp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raster_polygons_sub = raster_polygons[:25000]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "elapsed time is: 15463.357652902603s\n"
-     ]
+     "data": {
+      "text/plain": [
+       "(25000, 2)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# run poly_overlap\n",
-    "\n",
-    "import time\n",
-    "checkpoint = time.time()\n",
-    "\n",
-    "poly_overlap_out = poly_overlap(osm_buffer_gdf, raster_polygons)\n",
-    "\n",
-    "print(\"elapsed time is: {}s\".format(time.time()-checkpoint))"
+    "raster_polygons_sub.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4721\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(len(poly_overlap_out))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1088,121 +1081,97 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>osm_id</th>\n",
        "      <th>FID</th>\n",
        "      <th>geometry</th>\n",
-       "      <th>country</th>\n",
-       "      <th>city</th>\n",
-       "      <th>osm_type</th>\n",
-       "      <th>lat</th>\n",
-       "      <th>lon</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>89369215</td>\n",
-       "      <td>14962</td>\n",
-       "      <td>POLYGON ((5.516667 22.816667, 5.533333 22.8166...</td>\n",
-       "      <td>Algeria</td>\n",
-       "      <td>Tamanrasset</td>\n",
-       "      <td>town</td>\n",
-       "      <td>22.785454</td>\n",
-       "      <td>5.532446</td>\n",
+       "      <th>24994</th>\n",
+       "      <td>24994</td>\n",
+       "      <td>POLYGON ((8.304855999999999 10.154492, 8.31383...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>89980948</td>\n",
-       "      <td>14115</td>\n",
-       "      <td>POLYGON ((2.466667 27.216667, 2.483333 27.2166...</td>\n",
-       "      <td>Algeria</td>\n",
-       "      <td>In Salah</td>\n",
-       "      <td>town</td>\n",
-       "      <td>27.195033</td>\n",
-       "      <td>2.482613</td>\n",
+       "      <th>24995</th>\n",
+       "      <td>24995</td>\n",
+       "      <td>POLYGON ((9.284025 13.379459, 9.30199099999999...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>252600742</td>\n",
-       "      <td>396</td>\n",
-       "      <td>POLYGON ((2.95 36.816667, 3.025 36.816667, 3.0...</td>\n",
-       "      <td>Algeria</td>\n",
-       "      <td>Boumerdès</td>\n",
-       "      <td>town</td>\n",
-       "      <td>36.758882</td>\n",
-       "      <td>3.470596</td>\n",
+       "      <th>24996</th>\n",
+       "      <td>24996</td>\n",
+       "      <td>POLYGON ((13.51511 10.163475, 13.51511 10.1455...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>253167052</td>\n",
-       "      <td>633</td>\n",
-       "      <td>POLYGON ((3.691667 36.766667, 3.7 36.766667, 3...</td>\n",
-       "      <td>Algeria</td>\n",
-       "      <td>Thenia</td>\n",
-       "      <td>town</td>\n",
-       "      <td>36.724986</td>\n",
-       "      <td>3.556935</td>\n",
+       "      <th>24997</th>\n",
+       "      <td>24997</td>\n",
+       "      <td>POLYGON ((12.61679 13.379459, 12.634757 13.379...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>253167208</td>\n",
-       "      <td>360</td>\n",
-       "      <td>POLYGON ((3.658333 36.825, 3.675 36.825, 3.675...</td>\n",
-       "      <td>Algeria</td>\n",
-       "      <td>Zemmouri</td>\n",
-       "      <td>town</td>\n",
-       "      <td>36.786406</td>\n",
-       "      <td>3.601221</td>\n",
+       "      <th>24998</th>\n",
+       "      <td>24998</td>\n",
+       "      <td>POLYGON ((13.29053 10.163475, 13.308496 10.163...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>253291208</td>\n",
-       "      <td>1606</td>\n",
-       "      <td>POLYGON ((3.6 36.591667, 3.608333 36.591667, 3...</td>\n",
-       "      <td>Algeria</td>\n",
-       "      <td>Lakhdaria</td>\n",
-       "      <td>town</td>\n",
-       "      <td>36.563944</td>\n",
-       "      <td>3.596907</td>\n",
+       "      <th>24999</th>\n",
+       "      <td>24999</td>\n",
+       "      <td>POLYGON ((23.800869 10.154492, 23.800869 10.13...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      osm_id    FID                                           geometry  \\\n",
-       "0   89369215  14962  POLYGON ((5.516667 22.816667, 5.533333 22.8166...   \n",
-       "1   89980948  14115  POLYGON ((2.466667 27.216667, 2.483333 27.2166...   \n",
-       "2  252600742    396  POLYGON ((2.95 36.816667, 3.025 36.816667, 3.0...   \n",
-       "3  253167052    633  POLYGON ((3.691667 36.766667, 3.7 36.766667, 3...   \n",
-       "4  253167208    360  POLYGON ((3.658333 36.825, 3.675 36.825, 3.675...   \n",
-       "5  253291208   1606  POLYGON ((3.6 36.591667, 3.608333 36.591667, 3...   \n",
-       "\n",
-       "   country         city osm_type        lat       lon  \n",
-       "0  Algeria  Tamanrasset     town  22.785454  5.532446  \n",
-       "1  Algeria     In Salah     town  27.195033  2.482613  \n",
-       "2  Algeria    Boumerdès     town  36.758882  3.470596  \n",
-       "3  Algeria       Thenia     town  36.724986  3.556935  \n",
-       "4  Algeria     Zemmouri     town  36.786406  3.601221  \n",
-       "5  Algeria    Lakhdaria     town  36.563944  3.596907  "
+       "         FID                                           geometry\n",
+       "24994  24994  POLYGON ((8.304855999999999 10.154492, 8.31383...\n",
+       "24995  24995  POLYGON ((9.284025 13.379459, 9.30199099999999...\n",
+       "24996  24996  POLYGON ((13.51511 10.163475, 13.51511 10.1455...\n",
+       "24997  24997  POLYGON ((12.61679 13.379459, 12.634757 13.379...\n",
+       "24998  24998  POLYGON ((13.29053 10.163475, 13.308496 10.163...\n",
+       "24999  24999  POLYGON ((23.800869 10.154492, 23.800869 10.13..."
       ]
      },
-     "execution_count": 32,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "poly_overlap_out.head(6)"
+    "raster_polygons_sub.tail(6)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "poly_overlap_out.to_file(temp_data+'LS15_w001001_Clip_1500c300_polyoverlap_towns.shp', driver='ESRI Shapefile')"
+    "# run poly_overlap\n",
+    "\n",
+    "import time\n",
+    "checkpoint = time.time()\n",
+    "\n",
+    "poly_overlap_out = poly_overlap(osm_buffer_gdf, raster_polygons_sub)\n",
+    "\n",
+    "print(\"elapsed time is: {}s\".format(time.time()-checkpoint))\n",
+    "print(len(poly_overlap_out))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print(len(poly_overlap_out))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# poly_overlap_out.to_file(temp_data+'WPE_1KM_2016_Pop_Clip.tif_1500c300_polyoverlap_towns_subA.shp')\n"
    ]
   }
  ],
